apps/medium-place/podinfo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: medium-place
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - podinfo.medium.place
      secretName: podinfo-medium-place-tls
  rules:
    - host: podinfo.medium.place
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: podinfo
                port: 80
